force-app/main/default/objects/Case_Change_Event__e/Case_Change_Event__e.object-meta.xml
<CustomObject>
    <label>Case Change Event</label>
    <pluralLabel>Case Change Event</pluralLabel>
</CustomObject>