force-app/main/default/objects/Case_Change_Event__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Used to store Case Id</description>
    <label>Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>