force-app/main/default/objects/Case_Change_Event__e/fields/Changed_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Changed_Field_Name__c</fullName>
    <description>Used to store API name of the field whose value is being changed.</description>
    <label>Changed Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>