force-app/main/default/objects/Case_Change_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Used to store the User Id who is trying to update the Closed Case&apos;s Status OR Owner</description>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>